--- a/package.json
+++ b/package.json
@@ -25,6 +25,15 @@
     "ejs-mate": "^2.3.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-minify-html": "^1.0.6",
+    "gulp-ng-annotate": "^2.0.0",
+    "gulp-nodemon": "^2.0.6",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^2.0.0-alpha",
+    "gulp-uglify": "^1.5.3",
     "log4js": "^0.6.35",
     "moment": "^2.13.0",
     "redis": "^2.6.0-1",
