--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "moment": "^2.13.0",
     "redis": "^2.6.0-1",
     "request": "^2.72.0",
-    "wechat": "^2.0.3"
+    "wechat": "^2.0.3",
+    "wechat-enterprise": "^0.1.1"
   }
 }
