call wechat-enterprise-api to get user and department info.

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "log4js": "^0.6.35",
     "moment": "^2.13.0",
     "redis": "^2.6.0-1",
-    "request": "^2.72.0",
+    "urllib": "^2.9.0",
     "wechat": "^2.0.3",
     "wechat-enterprise": "^0.1.1"
   }
